# IonTracks

./: .gitignore  .gitpod.yml  README.md  SH_spc_files.py  cython_time.txt  distr_ion_tracks.py  distr_ion_tracks.pyx  get_b_LET.py  install_project.py  main.py  numba_time.txt  numba_time_parallel.txt  pytest.ini  requirements.txt  results_visualization.ipynb  scanned_beam.py  setup.cfg  setup.py  single_track.py  times_result.csv  times_result_0.csv  times_result_1.csv  times_result_2.csv  times_result_3.csv
.github/: dependabot.yml
Continuous_photon_electron_beam/: Boag_theory.py  example_continuous.py
Initial_recombination/: pyxpp.py
IonBeams/: README.md  data_Jaffe.csv  example.py  functions.py  plot_Geiss_Jaffe.py  plot_full_beam.py  plot_recombination.py  result.csv  run.py  scanned_beam.py  single_track.py
IonTracks_Cython_version2/: create_and_start_job.py  main.py  prun_pass_parameters.py
Pulsed_photon_electron_beam/: Boag_theory.py  example.py  recombination_Inseok.py
continuous_beam/: Makefile  README.md  distribute_and_evolve_pulsed.py  main_continuous.py
cython/: Makefile  general_and_initial_recombination.pyx  setup.py
electrons/: Boag_theory.py  example_continuous_electron_beam.py  example_pulsed_electron_beam.py
fastmath_results/: times_result_0.csv  times_result_1.csv  times_result_2.csv  times_result_3.csv
hadrons/: common_properties.py  example_continuous_beam.py  example_continuous_beam_backend.py  example_single_track.py  functions.py  geiss_utils.py  initial_recombination.py  initial_recombination_numba.py  initial_recombination_numba_parallel.py  solver.py  utils.py
initial_recombination/: Makefile  distr_ion_tracks.c  distr_ion_tracks.html  distr_ion_tracks.pxd  main.py
no_fastmath_results/: times_result.csv  times_result_0.csv  times_result_test.csv
pulsed_beam/: distribute_and_evolve_pulsed.c  distribute_and_evolve_pulsed.html  (+4 more)
(+112 files in other folders)
