[metadata]
name = iontracks
version = 1.0.0
author = ion tracks team
description = ion tracks description
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jbrage/IonTracks
project_urls =
    Bug Tracker = https://github.com/jbrage/IonTracks/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires = file: requirements.txt


[pycodestyle]
max-line-length=120

[flake8]
max-line-length=120
